--- a/views/results.hbs
+++ b/views/results.hbs
@@ -1,1 +1,7 @@
 <h2>Students who passed the exam:</h2>
+{{#each students}}
+{{#if this.hasPassed}}
+{{!-- <div>{{this.name}}</div> --}}
+{{> list this}}
+{{/if}}
+{{/each}}
